# reinforcement-learning-replications

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run.py  run_ddpg.py  run_td3.py  setup.cfg  setup.py  simple_pg.ipynb  tox.ini
.github/workflows/: ci.yaml  publish-to-pypi-or-testpypi.yml  publish-to-pypi.yml  publish.yaml  release.yaml
benchmarks/: convert.py  run_benchmarks.py  run_ddpg.py  run_ppo.py  run_td3.py  run_trpo.py  run_vpg.py  visualization.html
benchmarks/Ant-v4/ddpg/seed-0/: model.pt
benchmarks/Ant-v4/ddpg/seed-1/: model.pt
benchmarks/Ant-v4/ddpg/seed-2/: model.pt
benchmarks/Ant-v4/ppo/seed-0/: model.pt
benchmarks/Ant-v4/ppo/seed-1/: model.pt
benchmarks/Ant-v4/ppo/seed-2/: model.pt
benchmarks/Ant-v4/td3/seed-0/: model.pt
benchmarks/Ant-v4/td3/seed-1/: model.pt
benchmarks/Ant-v4/td3/seed-2/: model.pt
benchmarks/Ant-v4/trpo/seed-0/: model.pt
benchmarks/Ant-v4/trpo/seed-1/: model.pt
benchmarks/Ant-v4/trpo/seed-2/: model.pt
benchmarks/Ant-v4/vpg/seed-0/: model.pt
benchmarks/Ant-v4/vpg/seed-1/: model.pt
benchmarks/Ant-v4/vpg/seed-2/: model.pt
benchmarks/HalfCheetah-v4/ddpg/seed-0/: model.pt
benchmarks/HalfCheetah-v4/ddpg/seed-1/: model.pt
benchmarks/HalfCheetah-v4/ddpg/seed-2/: model.pt
benchmarks/HalfCheetah-v4/ppo/seed-0/: model.pt
benchmarks/HalfCheetah-v4/ppo/seed-1/: model.pt
benchmarks/HalfCheetah-v4/ppo/seed-2/: model.pt
benchmarks/HalfCheetah-v4/td3/seed-0/: model.pt
benchmarks/HalfCheetah-v4/td3/seed-1/: model.pt
benchmarks/HalfCheetah-v4/td3/seed-2/: model.pt
benchmarks/HalfCheetah-v4/trpo/seed-0/: model.pt
benchmarks/HalfCheetah-v4/trpo/seed-1/: model.pt
benchmarks/HalfCheetah-v4/trpo/seed-2/: model.pt
benchmarks/HalfCheetah-v4/vpg/seed-0/: model.pt
benchmarks/HalfCheetah-v4/vpg/seed-1/: model.pt
benchmarks/HalfCheetah-v4/vpg/seed-2/: model.pt
benchmarks/Hopper-v4/ddpg/seed-0/: model.pt
benchmarks/csv/: Ant-v4.csv  HalfCheetah-v4.csv  Hopper-v4.csv  Swimmer-v4.csv  Walker2d-v4.csv
rl_replicas/: log.py
rl_replicas/algorithms/: __init__.py  ddpg.py  ppo.py  td3.py  trpo.py  vpg.py
rl_replicas/common/: policies.py  replay_buffer.py  torch_net.py  utils.py  value_function.py
rl_replicas/common/base_algorithms/: __init__.py  off_policy_algorithm.py  on_policy_algorithm.py
rl_replicas/common/optimizers/: conjugate_gradient_optimizer.py
rl_replicas/common/policies/: __init__.py  categorical_policy.py  deterministic_mlp_policy.py  deterministic_policy.py  mlp_policy.py  policy.py
rl_replicas/common/value_functions/: __init__.py  mlp_value_function.py
rl_replicas/ppo/: __init__.py
rl_replicas/trpo/: __init__.py  trpo.py
rl_replicas/vpg/: __init__.py  vpg.py
runs/20201016-063905_VPG_CartPole-v0_seed0/: model.th
runs/20201016-070909_VPG_CartPole-v0_seed1/tensorboard/: events.out.tfevents.1602832151.eecaddbba794.3822.0
runs/20201016-072058_VPG_CartPole-v0_seed2/tensorboard/: events.out.tfevents.1602832860.eecaddbba794.3949.0
src/rl_replicas/: evaluator.py  experience.py  metrics_manager.py  q_function.py  replay_buffer.py  seed_manager.py  utils.py  value_function.py
src/rl_replicas/algorithms/: __init__.py  ddpg.py  ppo.py  td3.py  trpo.py  vpg.py
src/rl_replicas/base_algorithms/: __init__.py  off_policy_algorithm.py  on_policy_algorithm.py
src/rl_replicas/common/: q_function.py  replay_buffer.py  utils.py  value_function.py
src/rl_replicas/networks/: __init__.py  mlp.py
src/rl_replicas/optimizers/: __init__.py  conjugate_gradient_optimizer.py
src/rl_replicas/policies/: __init__.py  categorical_policy.py  deterministic_policy.py  gaussian_policy.py  policy.py  random_policy.py  stochastic_policy.py
src/rl_replicas/samplers/: __init__.py  batch_sampler.py  sampler.py
tests/: conftest.py  test_samplers.py
tests/integration_tests/: test_ddpg.py  test_ppo.py  test_td3.py  test_trpo.py  test_vpg.py
(+111 files in other folders)
