[project]
name = "rl-replicas"
description = "Reinforcement Learning Replications is a set of Pytorch implementations of reinforcement learning algorithms."
readme = "README.md"
authors = [
  { name = "Yamato Kataoka" }
]
keywords = ["rl_replicas", "reinforcement learning", "deep learning", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries"
]
requires-python = "~=3.10"
dependencies = [
  "gymnasium~=1.0.0",
  "numpy~=2.1.3",
  "scipy~=1.14.1",
  "tensorboard~=2.18.0",
  "torch~=2.5.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yamatokataoka/reinforcement-learning-replications"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "mypy~=1.13.0",
  "pytest~=8.3.4",
  "ruff~=0.8.2",
  "tox~=4.23.2",
]
