[metadata]
name = rl_replicas
version = 0.0.2
description = Reinforcement Learning Replications is a set of Pytorch implementations of reinforcement learning algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yamato Kataoka
url = https://github.com/yamatokataoka/reinforcement-learning-replications
license = MIT
keywords = reinforcement-learning

[options]
package_dir=
  =src
packages=find:
install_requires =
  gym[atari, box2d, classic_control]
  numpy
  scipy
  torch >= 1.4.0
  tensorboard
python_requires = >=3.6

[options.packages.find]
where=src
