[metadata]
name = rl-replicas
version = file: VERSION
description = Reinforcement Learning Replications is a set of Pytorch implementations of reinforcement learning algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yamato Kataoka
url = https://github.com/yamatokataoka/reinforcement-learning-replications
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Software Development :: Libraries
license = MIT
license_files = LICENSE
keywords = rl_replicas, reinforcement learning, deep learning, pytorch

[options]
package_dir=
  =src
packages=find:
install_requires =
  gym
  numpy
  scipy
  torch >= 1.4.0
  tensorboard
python_requires = >=3.10

[options.packages.find]
where=src
